Kaggle API implementation; Dataset download; requirements.txt

--- a/covid_19_search_engine.ipynb
+++ b/covid_19_search_engine.ipynb
@@ -16,18 +16,127 @@
    "id": "db3c1946c8dce761"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Define all the import"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "67677eb828dc5627"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import kaggle\n",
+    "import platform"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T17:15:38.687101Z",
+     "start_time": "2024-02-23T17:15:38.683808Z"
+    }
+   },
+   "id": "ef963128ebd2163f",
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-23T16:42:24.634037Z",
-     "start_time": "2024-02-23T16:42:24.630843Z"
+     "end_time": "2024-02-23T17:15:43.328588Z",
+     "start_time": "2024-02-23T17:15:43.323236Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Python version: 3.12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking Python version\n",
+    "print(\"- Python version: {}\".format(platform.python_version()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Define Useful Constant"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "466d12a807cbf965"
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "source": [
+    "# PATHS AND SIMILAR\n",
+    "DATASET_PATH = \"archives\"  # Path to dataset folder\n",
+    "DATASET_ID = \"plameneduardo/sarscov2-ctscan-dataset\"  # Necessary for download dataset (Kaggle API)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T17:17:25.514576Z",
+     "start_time": "2024-02-23T17:17:25.511739Z"
+    }
+   },
+   "id": "1b28b3861eb5f84b",
+   "execution_count": 13
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Download the dataset from Kaggle"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "40bc8aa63bca26e5"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "> Dataset alredy downloaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Download the dataset if not exist in the workplace\n",
+    "if not os.path.exists(DATASET_PATH):\n",
+    "    print(\"\\n> Download the dataset from Kaggle...\")\n",
+    "    # Download dataset and unzip it\n",
+    "    kaggle.api.dataset_download_files(dataset=DATASET_ID, path=DATASET_PATH, quiet=False, unzip=True)\n",
+    "else:\n",
+    "    print(\"\\n> Dataset alredy downloaded.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T17:19:17.947342Z",
+     "start_time": "2024-02-23T17:19:17.941569Z"
+    }
+   },
+   "id": "c294b78fcbcece79",
+   "execution_count": 15
   }
  ],
  "metadata": {
