--- a/covid_19_search_engine.ipynb
+++ b/covid_19_search_engine.ipynb
@@ -44,6 +44,16 @@
    "execution_count": 10
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Version Control"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4c281a9d21f536f8"
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "initial_id",
