--- a/covid_19_search_engine.ipynb
+++ b/covid_19_search_engine.ipynb
@@ -17,6 +17,36 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ebe002562a64b40a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Install the requirements"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "83f7612f7663945"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "eb03e351d14986a2",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "# Define all the import"
    ],
@@ -36,17 +66,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T17:15:38.687101Z",
-     "start_time": "2024-02-23T17:15:38.683808Z"
+     "end_time": "2024-02-23T17:24:35.983186Z",
+     "start_time": "2024-02-23T17:24:35.979549Z"
     }
    },
    "id": "ef963128ebd2163f",
-   "execution_count": 10
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Version Control"
+    "## Version Control"
    ],
    "metadata": {
     "collapsed": false
@@ -55,13 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-23T17:15:43.328588Z",
-     "start_time": "2024-02-23T17:15:43.323236Z"
+     "end_time": "2024-02-23T17:24:35.986277Z",
+     "start_time": "2024-02-23T17:24:35.982508Z"
     }
    },
    "outputs": [
@@ -81,7 +111,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Define Useful Constant"
+    "## Define Useful Constant"
    ],
    "metadata": {
     "collapsed": false
@@ -99,23 +129,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T17:17:25.514576Z",
-     "start_time": "2024-02-23T17:17:25.511739Z"
+     "end_time": "2024-02-23T17:24:35.988647Z",
+     "start_time": "2024-02-23T17:24:35.985652Z"
     }
    },
    "id": "1b28b3861eb5f84b",
-   "execution_count": 13
+   "execution_count": 24
   },
   {
-   "cell_type": "code",
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# Download the dataset from Kaggle"
+    "## Download the dataset from Kaggle"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "40bc8aa63bca26e5"
+   "id": "4d1890303dddf97f"
   },
   {
    "cell_type": "code",
@@ -130,7 +159,7 @@
     }
    ],
    "source": [
-    "# # Download the dataset if not exist in the workplace\n",
+    "# Download the dataset if not exist in the workplace\n",
     "if not os.path.exists(DATASET_PATH):\n",
     "    print(\"\\n> Download the dataset from Kaggle...\")\n",
     "    # Download dataset and unzip it\n",
@@ -141,12 +170,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T17:19:17.947342Z",
-     "start_time": "2024-02-23T17:19:17.941569Z"
+     "end_time": "2024-02-23T17:24:35.991102Z",
+     "start_time": "2024-02-23T17:24:35.987922Z"
     }
    },
    "id": "c294b78fcbcece79",
-   "execution_count": 15
+   "execution_count": 25
   }
  ],
  "metadata": {
