--- a/covid_19_search_engine.ipynb
+++ b/covid_19_search_engine.ipynb
@@ -124,7 +124,9 @@
    "source": [
     "# PATHS AND SIMILAR\n",
     "DATASET_PATH = \"archives\"  # Path to dataset folder\n",
-    "DATASET_ID = \"plameneduardo/sarscov2-ctscan-dataset\"  # Necessary for download dataset (Kaggle API)"
+    "DATASET_ID = \"plameneduardo/sarscov2-ctscan-dataset\"  # Necessary for download dataset (Kaggle API)\n",
+    "COVID_PATH = os.path.join(DATASET_PATH, \"COVID\")\n",
+    "NON_COVID_PATH = os.path.join(DATASET_PATH, \"non-COVID\")"
    ],
    "metadata": {
     "collapsed": false,
