--- a/covid_19_search_engine.ipynb
+++ b/covid_19_search_engine.ipynb
@@ -30,81 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "eb03e351d14986a2",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-26T09:33:03.098223Z",
-     "start_time": "2024-03-26T09:33:01.998546Z"
-    }
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: kaggle~=1.6.6 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 1)) (1.6.6)\r\n",
-      "Requirement already satisfied: ImageHash~=4.3.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 2)) (4.3.1)\r\n",
-      "Requirement already satisfied: Pillow~=10.2.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 3)) (10.2.0)\r\n",
-      "Requirement already satisfied: matplotlib~=3.8.3 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 4)) (3.8.3)\r\n",
-      "Requirement already satisfied: pandas~=2.1.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 5)) (2.1.1)\r\n",
-      "Requirement already satisfied: numpy~=1.26.4 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 6)) (1.26.4)\r\n",
-      "Requirement already satisfied: keras~=3.1.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 7)) (3.1.1)\r\n",
-      "Requirement already satisfied: tensorflow~=2.16.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from -r requirements.txt (line 8)) (2.16.1)\r\n",
-      "Requirement already satisfied: six>=1.10 in /Users/matteo/Library/Python/3.10/lib/python/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (1.16.0)\r\n",
-      "Requirement already satisfied: certifi in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (2023.7.22)\r\n",
-      "Requirement already satisfied: python-dateutil in /Users/matteo/Library/Python/3.10/lib/python/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (2.8.2)\r\n",
-      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (2.31.0)\r\n",
-      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (4.66.1)\r\n",
-      "Requirement already satisfied: python-slugify in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (8.0.3)\r\n",
-      "Requirement already satisfied: urllib3 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (1.26.12)\r\n",
-      "Requirement already satisfied: bleach in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from kaggle~=1.6.6->-r requirements.txt (line 1)) (6.1.0)\r\n",
-      "Requirement already satisfied: PyWavelets in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from ImageHash~=4.3.1->-r requirements.txt (line 2)) (1.4.1)\r\n",
-      "Requirement already satisfied: scipy in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from ImageHash~=4.3.1->-r requirements.txt (line 2)) (1.11.3)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib~=3.8.3->-r requirements.txt (line 4)) (1.2.0)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib~=3.8.3->-r requirements.txt (line 4)) (0.12.1)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib~=3.8.3->-r requirements.txt (line 4)) (4.48.1)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib~=3.8.3->-r requirements.txt (line 4)) (1.4.5)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/matteo/Library/Python/3.10/lib/python/site-packages (from matplotlib~=3.8.3->-r requirements.txt (line 4)) (23.2)\r\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from matplotlib~=3.8.3->-r requirements.txt (line 4)) (3.1.1)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas~=2.1.1->-r requirements.txt (line 5)) (2023.3.post1)\r\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pandas~=2.1.1->-r requirements.txt (line 5)) (2023.3)\r\n",
-      "Requirement already satisfied: absl-py in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from keras~=3.1.1->-r requirements.txt (line 7)) (2.1.0)\r\n",
-      "Requirement already satisfied: rich in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from keras~=3.1.1->-r requirements.txt (line 7)) (13.7.1)\r\n",
-      "Requirement already satisfied: namex in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from keras~=3.1.1->-r requirements.txt (line 7)) (0.0.7)\r\n",
-      "Requirement already satisfied: h5py in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from keras~=3.1.1->-r requirements.txt (line 7)) (3.10.0)\r\n",
-      "Requirement already satisfied: optree in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from keras~=3.1.1->-r requirements.txt (line 7)) (0.10.0)\r\n",
-      "Requirement already satisfied: ml-dtypes in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from keras~=3.1.1->-r requirements.txt (line 7)) (0.3.2)\r\n",
-      "Requirement already satisfied: astunparse>=1.6.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (1.6.3)\r\n",
-      "Requirement already satisfied: flatbuffers>=23.5.26 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (23.5.26)\r\n",
-      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (0.5.4)\r\n",
-      "Requirement already satisfied: google-pasta>=0.1.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (0.2.0)\r\n",
-      "Requirement already satisfied: libclang>=13.0.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (16.0.6)\r\n",
-      "Requirement already satisfied: opt-einsum>=2.3.2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (3.3.0)\r\n",
-      "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (4.23.4)\r\n",
-      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (58.1.0)\r\n",
-      "Requirement already satisfied: termcolor>=1.1.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (2.4.0)\r\n",
-      "Requirement already satisfied: typing-extensions>=3.6.6 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (4.8.0)\r\n",
-      "Requirement already satisfied: wrapt>=1.11.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (1.14.1)\r\n",
-      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (1.60.1)\r\n",
-      "Requirement already satisfied: tensorboard<2.17,>=2.16 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (2.16.2)\r\n",
-      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorflow~=2.16.1->-r requirements.txt (line 8)) (0.36.0)\r\n",
-      "Requirement already satisfied: wheel<1.0,>=0.23.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from astunparse>=1.6.0->tensorflow~=2.16.1->-r requirements.txt (line 8)) (0.42.0)\r\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests->kaggle~=1.6.6->-r requirements.txt (line 1)) (2.1.1)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests->kaggle~=1.6.6->-r requirements.txt (line 1)) (3.4)\r\n",
-      "Requirement already satisfied: markdown>=2.6.8 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow~=2.16.1->-r requirements.txt (line 8)) (3.5.2)\r\n",
-      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow~=2.16.1->-r requirements.txt (line 8)) (0.7.2)\r\n",
-      "Requirement already satisfied: werkzeug>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from tensorboard<2.17,>=2.16->tensorflow~=2.16.1->-r requirements.txt (line 8)) (3.0.1)\r\n",
-      "Requirement already satisfied: webencodings in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from bleach->kaggle~=1.6.6->-r requirements.txt (line 1)) (0.5.1)\r\n",
-      "Requirement already satisfied: text-unidecode>=1.3 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from python-slugify->kaggle~=1.6.6->-r requirements.txt (line 1)) (1.3)\r\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from rich->keras~=3.1.1->-r requirements.txt (line 7)) (3.0.0)\r\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/matteo/Library/Python/3.10/lib/python/site-packages (from rich->keras~=3.1.1->-r requirements.txt (line 7)) (2.16.1)\r\n",
-      "Requirement already satisfied: mdurl~=0.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich->keras~=3.1.1->-r requirements.txt (line 7)) (0.1.2)\r\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow~=2.16.1->-r requirements.txt (line 8)) (2.1.3)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -r requirements.txt"
    ]
@@ -116,18 +47,9 @@
     "collapsed": false
    },
    "source": [
-    "# Importing Required Libraries and Modules Summary\n",
+    "# Importing Required Libraries\n",
     "\n",
-    "This part of the code imports necessary libraries and modules for further execution, providing functionalities for dataset management, visualization, and image processing.\n",
-    "\n",
-    "## Imported Libraries and Modules\n",
-    "- `os`: A standard library for interacting with the operating system.\n",
-    "- `kaggle`: A library for accessing the Kaggle API to download datasets.\n",
-    "- `platform`: A standard library for accessing platform-specific information.\n",
-    "- `imagehash`: A library for computing perceptual image hashes, useful for identifying duplicate images.\n",
-    "- `matplotlib.pyplot`: A module from the Matplotlib library used for visualizing images and plotting graphs.\n",
-    "- `PIL.Image`: A module from the Python Imaging Library (PIL) used for opening, manipulating, and saving many different image file formats.\n",
-    "- `UnidentifiedImageError`: An exception raised when an image file cannot be identified or opened by PIL."
+    "This part of the code imports necessary libraries."
    ]
   },
   {
@@ -169,16 +91,7 @@
    "source": [
     "# Dataset Paths and Constants Summary\n",
     "\n",
-    "This part of the code defines useful constants and paths.\n",
-    "\n",
-    "## 1. Defined Constants and Paths\n",
-    "- `DATASET_PATH`: Specifies the path to the dataset folder named \"archives\".\n",
-    "- `DATASET_ID`: Provides the unique identifier necessary for downloading the dataset using the Kaggle API.\n",
-    "- `COVID_PATH`: Defines the path to the directory containing COVID images within the dataset folder.\n",
-    "- `NON_COVID_PATH`: Defines the path to the directory containing non-COVID images within the dataset folder.\n",
-    "- `DATA_PATH`: Defines the path to the directory containing data saved during various processes.\n",
-    "- `PLOT_PATH`: Defines the path to the directory containing plot generated during various processes\n",
-    "- `CLASS_LIST`: Specifies the string name of the two classes of the objects of the dataset.\n"
+    "This part of the code defines useful constants and paths."
    ]
   },
   {
@@ -272,12 +185,6 @@
    "source": [
     "# Dataset Download from Kaggle\n",
     "\n",
-    "This part of the code checks if the dataset exists in the workspace and downloads it from Kaggle if it does not already exist.\n",
-    "\n",
-    "## 1. Checking Dataset Existence\n",
-    "- The code uses the `os.path.exists()` function to check if the dataset is already present in the workspace.\n",
-    "\n",
-    "## 2. Downloading Dataset from Kaggle\n",
     "- If the dataset does not exist, the code proceeds to download it from Kaggle using the `kaggle.api.dataset_download_files()` function.\n",
     "- The `DATASET_ID` and `DATASET_PATH` variables specify the dataset to download and the location to save it, respectively.\n",
     "- The `unzip=True` parameter ensures that the downloaded dataset is unzipped after download.\n"
