--- a/covid_19_search_engine.ipynb
+++ b/covid_19_search_engine.ipynb
@@ -517,7 +517,7 @@
     "    \n",
     "    print(\"> DATASET CHECK COMPLETE!\")\n",
     "\n",
-    "## ******************************************** CHECKING THE DATASET ******************************************** ##\n",
+    "## ************************************ CHECKING THE DATASET ********************************** ##\n",
     "\n",
     "# Execute Pre-Processing tasks on dataset \n",
     "checking_dataset(dataset_path=DATASET_PATH, covid_path=COVID_PATH, non_covid_path=NON_COVID_PATH)\n"
@@ -720,7 +720,7 @@
     "    # Display plot\n",
     "    plt.show()\n",
     "    \n",
-    "## ******************************************** DATA PREPARATION ******************************************** ##\n",
+    "## *************************************** DATA PREPARATION ************************************** ##\n",
     "\n",
     "# Load the keras dataset\n",
     "print(\"> Dataset:\")\n",
