--- a/ir_covid19_search_engine.ipynb
+++ b/ir_covid19_search_engine.ipynb
@@ -1285,13 +1285,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-18T10:05:40.522639Z",
-     "start_time": "2024-04-18T10:05:27.773497Z"
+     "end_time": "2024-04-18T10:16:11.839549Z",
+     "start_time": "2024-04-18T10:16:10.030142Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "## ************************************ COMPUTE THE EVALUATION ********************************** ##\n",
+    "## ************************************ COMPUTE THE EVALUATION METRICS ********************************** ##\n",
     "\n",
     "# Choose a file from the test dataset\n",
     "chosen_file_path, chosen_id = choose_query_file(query_dataset=test_data)\n",
@@ -1315,32 +1315,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "> Chosen image from the test dataset: archives/non-COVID/Non-Covid (1001).png\n",
+      "> Chosen image from the test dataset: archives/COVID/Covid (229).png\n",
       "\n",
-      "> Chosen ID: 1\n",
+      "> Chosen ID: 0\n",
       "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 110ms/step\n",
       "\n",
       "> Evaluation Metrics for Cosine:\n",
       "-- Precision: 1.00000\n",
-      "-- Recall: 0.90000\n",
-      "-- F1-score: 0.94737\n",
-      "-- Top N Accuracy: 90.00000\n",
+      "-- Recall: 0.94000\n",
+      "-- F1-score: 0.96907\n",
+      "-- Top N Accuracy: 94.00000\n",
       "\n",
       "> Evaluation Metrics for Euclidean:\n",
       "-- Precision: 1.00000\n",
-      "-- Recall: 0.90000\n",
-      "-- F1-score: 0.94737\n",
-      "-- Top N Accuracy: 90.00000\n",
+      "-- Recall: 0.94000\n",
+      "-- F1-score: 0.96907\n",
+      "-- Top N Accuracy: 94.00000\n",
       "\n",
       "> Evaluation Metrics for Manhattan:\n",
       "-- Precision: 1.00000\n",
-      "-- Recall: 0.91000\n",
-      "-- F1-score: 0.95288\n",
-      "-- Top N Accuracy: 91.00000\n"
+      "-- Recall: 0.93000\n",
+      "-- F1-score: 0.96373\n",
+      "-- Top N Accuracy: 93.00000\n"
      ]
     }
    ],
-   "execution_count": 186
+   "execution_count": 189
   }
  ],
  "metadata": {
