--- a/ir_covid19_search_engine.ipynb
+++ b/ir_covid19_search_engine.ipynb
@@ -247,7 +247,7 @@
    "source": [
     "# Dataset Preprocessing Summary\n",
     "\n",
-    "This code performs preprocessing tasks on a dataset, which includes counting files, checking for corrupted files, filtering out duplicates, and plotting duplicate images alongside their originals.\n",
+    "This code performs preprocessing tasks on a dataset, which includes counting files, checking for corrupted files, and plotting duplicate images alongside their originals.\n",
     "\n",
     "## 1. Counting Files\n",
     "The `count_files` function counts the number of files with specified extensions in a specified directory. It takes the directory path and file extensions as inputs and returns the count of files.\n",
@@ -255,14 +255,10 @@
     "## 2. Checking for Corrupted Files\n",
     "The `corruption_filter` function checks the dataset for corrupted image files and provides an option to delete them. It iterates through all files, verifies their integrity using PIL's `Image` module, and removes corrupted files if requested.\n",
     "\n",
-    "## 3. Finding and Handling Duplicates\n",
-    "The `find_out_duplicate` function identifies duplicate images within the dataset. It computes the hash of each image and compares it with previous hashes to detect duplicates. If duplicates are found, it plots each pair of original and duplicate images side by side using Matplotlib. The user is prompted to decide whether to delete the duplicate images.\n",
-    "\n",
     "## Usage\n",
     "1. The code begins with checking the dataset's file count before preprocessing tasks.\n",
     "2. It then checks for corrupted files and provides an option to delete them.\n",
-    "3. Next, it identifies and handles duplicates within the COVID and non-COVID dataset subdirectories.\n",
-    "4. Finally, it confirms the total file count after preprocessing.\n",
+    "3. Finally, it confirms the total file count after preprocessing.\n",
     "\n",
     "This code ensures the integrity and cleanliness of the dataset for further analysis or model training."
    ],
